--- a/CW2/Views/Anouncements/Details.cshtml
+++ b/CW2/Views/Anouncements/Details.cshtml
@@ -4,11 +4,10 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Announcement</h2>
 
 <div>
-    <h4>Anouncement</h4>
-    <hr />
+    <h4></h4>
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(m => m.announcement.Title)
