--- a/CW2/Views/Shared/_Layout.cshtml
+++ b/CW2/Views/Shared/_Layout.cshtml
@@ -2,15 +2,15 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="@Url.Content("~/Content/favicon.ico")" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
-    @Styles.Render("~/Content/Site.css")
     @Scripts.Render("~/bundles/modernizr")
 
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-inverse navbar-fixed-top navbar-default">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -30,6 +30,10 @@
         </div>
     </div>
     <div class="container body-content">
+        <div id="left"></div>
+        <div id="right"></div>
+        <div id="top"></div>
+        <div id="bottom"></div>
         @RenderBody()
         <hr />
         <footer>
