--- a/CW2/Views/Anouncements/Details.cshtml
+++ b/CW2/Views/Anouncements/Details.cshtml
@@ -10,27 +10,27 @@
     <h4></h4>
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(m => m.announcement.Title)
+            @Html.DisplayNameFor(m => m.Announcement.Title)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.announcement.Title)
+            @Html.DisplayFor(model => model.Announcement.Title)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.announcement.Description)
+            @Html.DisplayNameFor(model => model.Announcement.Description)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.announcement.Description)
+            @Html.DisplayFor(model => model.Announcement.Description)
         </dd>
         @if(ViewContext.HttpContext.User.IsInRole("Lecturer"))
         {
         <dt>
-            @Html.DisplayNameFor(model => model.announcement.CountRe)
+            @Html.DisplayNameFor(model => model.Announcement.CountRe)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.announcement.CountRe)
+            @Html.DisplayFor(model => model.Announcement.CountRe)
         </dd>
         }
     </dl>
@@ -65,11 +65,11 @@
     {
         <div class="form-group">
             @Html.AntiForgeryToken()
-            @Html.LabelFor(model => model.comment.CommentDes, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Comment.CommentDes, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.comment.CommentDes, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.comment.CommentDes, "", new { @class = "text-danger" })
-                @Html.HiddenFor(model => model.comment.CompareFig, new { Value = Url.RequestContext.RouteData.Values["id"] })
+                @Html.EditorFor(model => model.Comment.CommentDes, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Comment.CommentDes, "", new { @class = "text-danger" })
+                @Html.HiddenFor(model => model.Comment.CompareFig, new { Value = Url.RequestContext.RouteData.Values["id"] })
             </div>
         </div>
     }
@@ -79,7 +79,7 @@
 
     <br />
     <p>
-        @Html.ActionLink("Edit", "Edit", new { id = Model.announcement.Id }) |
+        @Html.ActionLink("Edit", "Edit", new { id = Model.Announcement.Id }) |
         @Html.ActionLink("Back to List", "Index")
     </p>
 
